fixing notation, typos, and adding some comments

--- a/preamble.tex
+++ b/preamble.tex
@@ -74,11 +74,11 @@
 
 
 % Marginal notes in draft mode -----------------------------------
-%%%%% \newcommand{\scott}[1]{\stepcounter{comment}{{\color{blue} $\star^{(\arabic{comment})}$}}\marginpar{\color{blue}  $\star^{(\arabic{comment})}$ \usefont{T1}{scott}{m}{n}  #1 --SM}}     % draft mode
-%%%%%\newcommand{\joel}[1]{\stepcounter{comment}{\color[rgb]{.2,.5,.6} $\star^{(\arabic{comment})}$}\marginpar{\color{green}  $\star^{(\arabic{comment})}$  #1 --J}}     % draft mode
-%%%%%%\newcommand{\sabin}[1]{\stepcounter{comment}{\color[rgb]{.2,.5,.6} $\star^{(\arabic{comment})}$}\marginpar{\color{red}  $\star^{(\arabic{comment})}$  #1 --SC}}     % draft mode
-%%%%%\newcommand{\comment}[1]{\stepcounter{comment}$\star^{(\arabic{comment})}$\marginpar{\tiny $\star^{(\arabic{comment})}$ #1}}     % draft mode
-%%%%% \newcounter{comment}
+%\newcommand{\scott}[1]{\stepcounter{comment}{{\color{blue} $\star^{(\arabic{comment})}$}}\marginpar{\color{blue}  $\star^{(\arabic{comment})}$ \usefont{T1}{scott}{m}{n}  #1 --SM}}     % draft mode
+%\newcommand{\joel}[1]{\stepcounter{comment}{\color[rgb]{.2,.5,.6} $\star^{(\arabic{comment})}$}\marginpar{\color{green}  $\star^{(\arabic{comment})}$  #1 --J}}     % draft mode
+%\newcommand{\sabin}[1]{\stepcounter{comment}{\color[rgb]{.2,.5,.6} $\star^{(\arabic{comment})}$}\marginpar{\color{red}  $\star^{(\arabic{comment})}$  #1 --SC}}     % draft mode
+%\newcommand{\comment}[1]{\stepcounter{comment}$\star^{(\arabic{comment})}$\marginpar{\tiny $\star^{(\arabic{comment})}$ #1}}     % draft mode
+\newcounter{comment}
 \newcommand{\noop}[1]{}
 \newcommand{\todo}[1]{\textbf{\color[rgb]{.8,.2,.5}\small TODO: #1}}
 
